[workspace.package]
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2024"
license = "MIT"
version = "2.25.0"
repository = "https://github.com/o2sh/onefetch"

[workspace]
members = ["ascii", "image", "manifest"]

[workspace.dependencies]
owo-colors = "4.2.3"
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = [
    "color_quant",
    "jpeg",
    "png",
    "webp",
] }
strum = { version = "0.27.2", features = ["derive"] }

[package]
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
categories = ["command-line-utilities"]
description = "Command-line Git information tool"
exclude = ["docs/vercel/*"]
keywords = ["git", "cli", "terminal"]
name = "onefetch"
homepage = "https://onefetch.dev"
rust-version = "1.88.0"

[dependencies]
anyhow.workspace = true
askalono = "0.5.0"
byte-unit = "5.2.0"
clap.workspace = true
clap_complete = "4.5.61"
crossbeam-channel = "0.5.15"
gix = { version = "0.75.0", default-features = false, features = [
    "max-performance-safe",
    "blob-diff",
    "mailmap",
    "index",
    "status",
] }
gix-features = "0.44.1"
globset = "0.4.18"
human-panic = "2.0.4"
image.workspace = true
num-format = "0.4.4"
onefetch-ascii = { path = "ascii", version = "2.19.0" }
onefetch-image = { path = "image", version = "2.19.0" }
onefetch-manifest = { path = "manifest", version = "2.19.0" }
owo-colors.workspace = true
regex = "1.12.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
# TODO With the new value parsers, we're really close to being able to eliminate
# the strum dependency
strum.workspace = true
time = { version = "0.3.44", features = ["formatting"] }
time-humanize = { version = "0.1.3", features = ["time"] }
tokei = "13.0.0"
typetag = "0.2"

[dev-dependencies]
criterion = "0.8.0"
gix-testtools = "0.16.1"
insta = { version = "1.44.3", features = ["json", "redactions"] }
rstest = "0.26.1"

[[bench]]
name = "repo"
harness = false

[build-dependencies]
lazy_static = "1"
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
tera = { version = "1", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3.1"

[features]
fail-on-deprecated = []
