[workspace.package]
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2024"
license = "MIT"
version = "2.26.1"
repository = "https://github.com/o2sh/onefetch"

[workspace]
members = ["ascii", "image", "manifest"]

[package]
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
categories = ["command-line-utilities"]
description = "Command-line Git information tool"
exclude = ["docs/vercel/*"]
keywords = ["git", "cli", "terminal"]
name = "onefetch"
homepage = "https://onefetch.dev"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.101"
askalono = "0.5.0"
byte-unit = "5.2.0"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.62"
gix = { version = "0.78.0", default-features = false, features = [
    "max-performance-safe",
    "blob-diff",
    "mailmap",
    "index",
    "status",
] }
gix-features = "0.46.0"
globset = "0.4.18"
human-panic = "2.0.5"
image = { version = "0.25.9", default-features = false, features = [
    "color_quant",
    "jpeg",
    "png",
    "webp",
] }
num-format = "0.4.4"
onefetch-ascii = { path = "ascii", version = "2.19.0" }
onefetch-image = { path = "image", version = "2.19.0" }
onefetch-manifest = { path = "manifest", version = "2.19.0" }
owo-colors = "4.2.3"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting"] }
time-humanize = { version = "0.1.3", features = ["time"] }
tokei = "13.0.0"
typetag = "0.2.21"

[dev-dependencies]
criterion = "0.8.1"
gix-testtools = "0.18.0"
insta = { version = "1.45.0", features = ["json", "redactions"] }
rstest = "0.26.1"

[[bench]]
name = "repo"
harness = false

[build-dependencies]
lazy_static = "1.5.0"
regex = "1.12.2"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tera = { version = "1.20.1", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3.1"

[features]
fail-on-deprecated = []
