[package]
  authors.workspace    = true
  description          = "Display colorized ascii art to the terminal"
  edition.workspace    = true
  license.workspace    = true
  name                 = "onefetch-ascii"
  repository.workspace = true
  version.workspace    = true

[dependencies]
  owo-colors.workspace = true
