[package]
  authors.workspace    = true
  description          = "Display images in the terminal"
  edition.workspace    = true
  license.workspace    = true
  name                 = "onefetch-image"
  repository.workspace = true
  version.workspace    = true

[dependencies]
  anyhow.workspace = true
  clap.workspace   = true
  image.workspace  = true

[target.'cfg(not(windows))'.dependencies]
  base64      = "0.22.1"
  color_quant = "1.1.0"
  libc        = "0.2.169"
