[package]
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
name = "onefetch-image"
description = "Display images in the terminal"

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true

[target.'cfg(not(windows))'.dependencies]
color_quant = "1.1.0"
base64 = "0.22.1"
rustix = { version = "1.1.3", features = ["termios", "event"] }
