[package]
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
name = "onefetch-image"
description = "Display images in the terminal"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.53", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = [
    "color_quant",
    "jpeg",
    "png",
    "webp",
] }

[target.'cfg(not(windows))'.dependencies]
color_quant = "1.1.0"
base64 = "0.22.1"
rustix = { version = "1.1.3", features = ["termios", "event"] }
