[package]
  authors.workspace    = true
  description          = "Detect and parse manifest files"
  edition.workspace    = true
  license.workspace    = true
  name                 = "onefetch-manifest"
  repository.workspace = true
  version.workspace    = true

[dependencies]
  anyhow.workspace = true
  cargo_toml       = "0.21.0"
  npm-package-json = "0.1.3"
  strum.workspace  = true
