[package]
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
name = "onefetch-manifest"
description = "Detect and parse manifest files"

[dependencies]
anyhow = "1.0.101"
cargo_toml = "0.22.3"
npm-package-json = "0.1.3"
strum = { version = "0.27.2", features = ["derive"] }
