[package]
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
name = "onefetch-manifest"
description = "Detect and parse manifest files"

[dependencies]
anyhow = "1.0.102"
cargo_toml = "0.22.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
