[package]
  description = "this is a description"
  edition     = "2018"
  license     = "MIT"
  name        = "project"
  version     = "0.1.0"

[dependencies]
  anyhow        = "1.0"
  cortex-m-rtic = "0.6.0-alpha.1"

  [dependencies.cortex-m]
    version = "0.7.1"

  [dependencies.cortex-m-rt]
    version = "0.6.11"

  [dependencies.stm32f4xx-hal]
    features = [ "rt", "stm32f401" ]
    version  = "0.8.3"
